# Ethertum

./: .gitattributes  .gitignore  .rustfmt.toml  Cargo.toml  README.md  native_debug.sh  rust-toolchain  server.json  web_pack.sh  web_run.sh
.cargo/: config_build_faster.toml  config_build_fastest.toml
.github/workflows/: build_android_release.yml  build_ios_release.yml  build_linux_release.yml  build_macos_release.yml  build_wasm_release.yml  build_windows_release.yml  ghwl_release.yml
assets/: client.serverlist.json  playground.blend  playground.glb  spaceship.glb
assets/_refer_code/: SGFunc.hlsl  chunk_system.rs  controller.rs  material.rs  test_client.rs
assets/docs/: nerd-thinkings.md  nerd-voxel-solution.md
assets/shaders/: foliage.wgsl  liquid.wgsl  terrain.wgsl
crates/mobile/: Cargo.toml
crates/mobile/ios-src/: bindings.h  main.m
crates/mobile/src/: lib.rs
src/: build.rs  character_controller.rs  controller.rs  editor.rs  game.rs  game_client.rs  game_server.rs  lib.rs  main.rs  ui_hud.rs  wfc.rs  world.rs
src/client/: character_controller.rs  client_world.rs  debug.rs  game_client.rs  input.rs  mod.rs  settings.rs
src/client/editor/: mod.rs
src/client/ui/: debug.rs  hud.rs  items.rs  main_menu.rs  mod.rs  serverlist.rs  settings.rs
src/editor/: mod.rs
src/item/: mod.rs
src/net/: client_handler.rs  mod.rs  netproc_client.rs  netproc_server.rs  packet.rs  server_handler.rs
src/server/: dedicated_server.rs  game_server.rs  integrated_server.rs  mod.rs
src/ui/: debug.rs  hud.rs  main_menu.rs  mod.rs  serverlist.rs  settings.rs  ui_hud.rs
src/util/: macros.rs  mod.rs  registry.rs  vertexbuffer.rs  wfc.rs
src/voxel/: chunk.rs  chunk_system.rs  lighting.rs  material.rs  meshgen.rs  mod.rs  render.rs  vox.rs  voxel_client.rs  voxel_server.rs  worldgen.rs
src/world/: chunk.rs  chunk_storage.rs  chunk_system.rs  mod.rs
