[package]
name = "ethertia"
version = "0.1.0"
edition = "2021"


[features]
default = []
web = []  # disables some native crates


[dev-dependencies]
bevy = { version = "0.12", features = ["dynamic_linking", "file_watcher", "trace_tracy"] }
# cargo run --features bevy/trace_tracy


[dependencies]
bevy = { version = "0.12" }

bevy_atmosphere = "0.8"
bevy_xpbd_3d = "0.3"
# bevy_fps_controller = "0.2.3"
# bevy_rapier3d = "0.23"
bevy_renet = "0.0"

bevy_egui = "0.24"
bevy-inspector-egui = "0.22"
bevy_editor_pls = "0.7"

egui-notify = "0.12"


noise = "0.8"
bincode = "1.3"
serde = "1.0"

thread_local = "1.1"
once_cell = "1.19"
futures-lite = "2.0.1"  # async poll task 

sysinfo = "0.29"
native-dialog = "0.7"
memory-stats = "1.1.0"
log = "0.4.20"
env_logger = "0.11"
chrono = "0.4.31"
anyhow = "1.0.75"  # error handling


[workspace]
resolver = "2" # Important! wgpu/bevy needs this!


# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# further improve performances in a noticeable way, even for a release build (though the build itself will take longer to complete):
[profile.release]
codegen-units = 1

