[package]
name = "ethertia"
version = "0.1.0"
edition = "2021"


[features]
default = ["target_native_os"]
target_native_os = ["dep:bevy_atmosphere", "dep:native-dialog", "dep:memory-stats"]
target_web = []
experimental_channel = []


[dev-dependencies]
bevy = { version = "0.12", features = ["dynamic_linking", "file_watcher", "trace_tracy"] }
# cargo run --features bevy/trace_tracy


[dependencies]
bevy = { version = "0.12" }

bevy_xpbd_3d = "0.3"
# bevy_fps_controller = "0.2.3"
# bevy_rapier3d = "0.23"
bevy_renet = "0.0"

bevy_atmosphere = { version = "0.8", optional = true }
bevy_mod_billboard = "0.5"

bevy_egui = "0.24"
bevy-inspector-egui = "0.22"
bevy_editor_pls = "0.7"

egui_extras = { version = "0.24", default-features = false, features = []}
egui-notify = "0.12"


noise = "0.8"
bincode = "1.3"
serde = "1.0"

thread_local = "1.1"
once_cell = "1.19"
futures-lite = "2.0.1"  # async poll task 

sysinfo = "0.29"
native-dialog = { version = "0.7", optional = true }
memory-stats = { version = "1.1.0", optional = true }
log = "0.4.20"
env_logger = "0.11"
chrono = "0.4.31"
anyhow = "1.0.75"  # error handling
human_bytes = "0.4"

instant = "0.1.12"
crossbeam-channel = "0.5.11"

[workspace]
resolver = "2" # Important! wgpu/bevy needs this!


# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# further improve performances in a noticeable way, even for a release build (though the build itself will take longer to complete):
[profile.release]
lto = true
codegen-units = 1
strip = true
# opt-level = "z"  # "z"=34.4 MB, zip=9.25 MB


# cargo build --target wasm32-unknown-unknown --profile web-release
[profile.web-release]
inherits = "release"
opt-level = "z"  # default=39.2mb, "z"=17.3mb, 

