[package]
name = "ethertia"
version = "0.2.6"
edition = "2021"
default-run = "ethertia"

[features]
default = ["target_native_os"]
target_native_os = [
    "dep:bevy_atmosphere",
    "dep:bevy_editor_pls",
    "dep:native-dialog",
    "dep:memory-stats",
    "dep:sysinfo",
    #"reqwest?/blocking",
]
target_web = []
experimental_channel = []


[dev-dependencies]
bevy = { version = "0.13.1", features = ["dynamic_linking", "file_watcher", "trace_chrome"] }
# cargo run --features bevy/trace_tracy


[dependencies]
bevy = { version = "0.13.1" }

bevy_xpbd_3d = "0.4"
bevy_renet = "0.0.11"
# bevy_fps_controller = "0.2.3"
# bevy_rapier3d = "0.23"

#bevy_egui = { git = "https://github.com/okkmnone/bevy_egui.git", branch = "v0.24.0.tmpfix", default-features = false, features = ["open_url", "default_fonts"] }
#bevy-inspector-egui = { git = "https://github.com/okkmnone/bevy-inspector-egui.git", branch = "v0.22.1.fix" }
bevy_egui = "0.25"
bevy-inspector-egui = "0.23"
bevy_editor_pls = { version = "0.8", optional = true }
bevy_touch_stick = { version = "0.2" }
egui_extras = { version = "0.26", default-features = false, features = [] }
egui-notify = "0.13"
leafwing-input-manager = { version = "0.13" }

bevy_atmosphere = { version = "0.9", optional = true }
bevy_mod_billboard = "0.5"
bevy_common_assets = { version = "0.10", features = ["json"] }
bevy_obj = "0.13"

noise = "0.8"
bincode = "1.3"
serde = "1.0"
serde_json = "1.0" 
image = "0.24"  # for atlas gen
tiny_http = "0.12"  # for RCON http server

thread_local = "1.1"
once_cell = "1.19"
futures-lite = "2.0.1"  # async poll task

sysinfo = { version = "0.29", optional = true }
native-dialog = { version = "0.7", optional = true }
memory-stats = { version = "1.1.0", optional = true }
log = "0.4.20"
env_logger = "0.11"
chrono = "0.4.31"
anyhow = "1.0.75"  # error handling
human_bytes = "0.4"

rand = "0.8"
instant = "0.1"
crossbeam-channel = "0.5"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.11", default-features = false, features = ["json", "blocking", "rustls-tls"] }

[workspace]
resolver = "2" # Important! wgpu/bevy needs this!
members = ["crates/*"]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# further improve performances in a noticeable way, even for a release build (though the build itself will take longer to complete):
[profile.release]
lto = true
codegen-units = 1
strip = true
# opt-level = "z"  # "z"=34.4 MB, zip=9.25 MB


# cargo build --target wasm32-unknown-unknown --profile web-release
[profile.web-release]
inherits = "release"
opt-level = "z"  # default=39.2mb, "z"=17.3mb, 

[profile.android-debug]
inherits = "dev"
opt-level = 3